# Backend

./: card.json  data.json  db.sqlite3  itemData.json  limpar.py  pago.json  payemnt.json  pyproject.toml  status.txt  teste.json
config/: settings.py  urls.py
core/authUser/: admin.py  apps.py
core/authUser/migrations/: 0001_initial.py  0002_client_clientphysicalperson_clientlegalperson.py  0003_driver.py  0004_offices_employe_dataemploye.py  0005_remove_employe_office_alter_address_user.py  0006_dataemploye_employe.py  0007_alter_dataemploye_date_resignation.py  0008_user_telephone.py
core/authUser/models/: __init__.py  address.py  client.py  driver.py  employe.py  user.py
core/authUser/serializers/: __init__.py  address.py  client.py  driver.py  employe.py  user.py
core/authUser/views/: __init__.py  client.py  driver.py  employe.py  user.py
core/carrier/: admin.py  apps.py
core/carrier/migrations/: 0001_initial.py  0002_card.py  0002_payment_alter_vehicle_tb_mark.py  0003_delivery.py  0004_alter_delivery_date_effected_colect_and_more.py  0005_order.py  0006_itemorder.py  0007_alter_order_status_addressorder.py  0008_alter_addressorder_typeaddress.py  0009_rename_order_id_addressorder_id_order.py  0010_rename_value_payment_transaction_amount_and_more.py  0011_alter_payment_description_and_more.py  0012_rename_payment_method_payment_payment_method_id.py  0013_payment_date_generated_payment_date_update.py  0014_payment_ticket_url.py  0015_payment_date_expiration.py  (+4 more)
core/mercado_pago/: payment.py
core/populate/: apps.py
core/send_mail/: mail.py
(+25 files in other folders)
